# mega_GIT

./: .directory  .gitignore  README.md  clear_tmp_files  clear_tmp_files.bat  dos2unix.sh  notebook.txt  sh.exe.stackdump  test.bat  tux_CC0.blend  update_git.bat
485/srcCorExar/: .qmake.stash  corExar.pro  main.cpp
485/test/: main.c
8 ферзей/solution_8/: main.cpp
ASM/: compile.sh  hello.asm
Arduino/draw_line/: draw_line.ino
Arduino/nRF24_reader_aCard/: nRF24_reader_aCard.ino
Arduino/rxdemo/: rxdemo.ino
Arduino/test/: Makefile  main.c
Arduino/test_draw_line/: test_draw_line.ino
Arduino/txdemo/: txdemo.ino
Bots/: SaperBot.txt  notebook.txt  recognition_numbers.txt
Bots/Dota2HeroRecognize/: README.md
Bots/MySapper_bot/: MySapper_bot.pro
Bots/OpenCVColorDetectionDemo/: OpenCVColorDetectionDemo  config.ini
Bots/OpenCVSURFDemo/: OpenCVSURFDemo  OpenCVSURFDemo.pro
Bots/_RoboCraft/: _RoboCraft.pro
Bots/monitorLauncher/: monitorLauncher.pro
Bots/tesseract/: main.cpp
Godot/Project_000/: .gd  Node2D.gd  Node2D.tscn  a.gd  engine.cfg  export.cfg
Godot/Project_001/: engine.cfg  game.gd  main.tscn  test.tres
Godot/Project_002/: engine.cfg  main.tscn  map.tres
Godot/Project_003/: engine.cfg  main.gd  main.tscn  tiles.tres
Godot/Project_004/: engine.cfg  main.tscn  test_player.gd  test_player.tscn  tiles.tres
IOS/: notebook.txt
JS/: app.js  factorial.js  get_user.js  hello.txt  http.js  notebook.txt  server.js  tcp_1337.js  write_file.js
JS/expressapp/: package-lock.json  package.json
JS/serverapp/: app.js
KDE/Simple/: CMakeLists.txt  main.cpp
Linux/: run_thread.sh
OpenGL_tutorial/: run.sh
OpenGL_tutorial/lesson_003/: lesson_003.pro
OpenGL_tutorial/lesson_005/: lesson_005.pro
OpenGL_tutorial/lesson_006/: lesson_006.pro
OpenGL_tutorial/lesson_008/: lesson_008.pro
OpenGL_tutorial/lesson_009/: lesson_009.pro
OpenGL_tutorial/lesson_011/: lesson_011.pro
OpenGL_tutorial/lesson_017/: lesson_017.pro
OpenGL_tutorial/lesson_018/: lesson_018.pro
Partikel_accelleration_on_GPU/src/: particles
QML/test/: .gitignore  Makefile  button.qml  main.cpp  main.qml  myclass.hpp  qml.qrc  test.pro
Qt/: .gitignore  .qmake.stash  Makefile  _conf.sh  clean_tmp_files.bat  global.pro  my_programm.pro  programm.rc  wine.txt
Qt-Frameless-Window-DarkStyle/: frameless_window_dark.pro
Qt/App/: App  MainWindow.cpp  MainWindow.ui  mainwindow.h
Qt/GP2Y0A02Y/: GP2Y0A02Y.pro
Qt/Get_MyIP/: Get_MyIP.pro
Qt/Icons/: Icons.pro
Qt/MODBUS/: MODBUS.pro
Qt/MyBot/: MyBot.pro
Qt/NewMoonLight/: NewMoonLight.pro
Qt/Organizations/: Organizations.pro
Qt/PelcoD_485/: PelcoD_485.pro
Qt/QDBus/: serviceNameAndProperty.h
Qt/QRCodeGenerator/: QRCodeGenerator.pro  README.md
Qt/RS232/: RS232.pro
Qt/RS232_5/: RS232_5.pro
Qt/RS232_5_bridge/: RS232_5_bridge.pro
Qt/RS485/: RS485.pro
Qt/RtspMonitor/: RtspMonitor.pro  object_script.1.Debug  object_script.1.Release
Qt/Teacher/: Teacher.pro
Qt/Teacher_light/: Teacher_light.pro
Qt/Templates/: Templates.pro
Qt/Test_Game/: Test_Game.pro
Qt/Test_MSVC/: Test_MSVC.pro  main.cpp  mainwindow.cpp  mainwindow.hpp
Qt/Test_NeuronNet/: Test_NeuronNet.pro
Qt/Test_NewMoonLight/: Test_NewMoonLight.pro
Qt/Test_NewMoonLight_firmware/: Test_NewMoonLight_firmware.pro
Qt/Test_OpenGL/: .qmake.stash  Makefile  Test_OpenGL.pro
Qt/Test_draw_line/: Test_draw_line.pro
Qt/WiFi/: WiFi.pro
Qt/Work/: .directory
Qt/_Examples/: meta
Qt/_For_tests/: Makefile  _For_tests.pro  _For_tests.pro.user.b8f291d  object_script._For_tests
Qt/_lib/: stable.h
Qt/_moolticute/: Makefile.daemon  Makefile.gui  Moolticute.pro  MoolticuteApp  gui.pro  moolticuted
Qt/_test/: main.cpp  main.hpp  mainwindow.cpp  mainwindow.ui  test.pro  untitled  untitled.pro
Qt/auto_inc_version/: auto_inc_version.pro
Qt/camera/: camera  camera.pro
Qt/contentmanipulation/: contentmanipulation  contentmanipulation.pro
Qt/lib2/qtrpt/CommonFiles/: Barcode.cpp  CMakeLists.txt  CommonClasses.cpp  CommonClasses.h  CommonFiles_QtRpt.pri  CommonFiles_QtRptDesigner.pri  SQLHighlighter.cpp  SQLHighlighter.h  XYZ_ColorSelector.cpp  XYZ_ColorSelector.h  XYZ_Label.cpp  XYZ_Label.h  XYZ_ParamTree.cpp  XYZ_ParamTree.h  XYZ_TextEditor.cpp  XYZ_TextEditor.h  chart.cpp  tableDelegates.cpp  tableDelegates.h
Qt/lib2/qtrpt/QtRPT/: CMakeLists.txt  QtRPT.pri  ReadmeQtRPT.doc  RptBandObject.cpp  RptBandObject.h  RptCrossTabObject.cpp  RptCrossTabObject.h  RptDsAbstract.h  RptDsInline.h  RptDsPlugin.h  RptFieldObject.cpp  RptFieldObject.h  RptPageObject.cpp  RptPageObject.h  RptScriptEngine.cpp  RptScriptEngine.h  RptSql.cpp  RptSql.h  config.pri  qtrpt.cpp  qtrpt.h  qtrpt.qdocconf  qtrptnamespace.h
Qt/my_old_programm/Games/Chess/other/checkmate/checkmate-checkmate/src/: CMakeLists.txt  abstractengine.cpp  checkmate.kcfg  chessutilities.h  commandedit.cpp  gameconsole.cpp  gameinstance.cpp  gameinstance.h  gnuchessengine.cpp  main.cpp  movelist.cpp  movelist.h  movetablemodel.h  movetableview.cpp  movetableview.h  piece.cpp  piece.h  pieceinstance.h  promotiondialog.cpp  settings.kcfgc
Qt/my_programm/Organizations/Impulse/E6-27/e6-27_interface/: CMakeLists.txt  stm32.cmake  stm32_flash.ld
Qt/my_programm/Organizations/Impulse/E6-27/e6-27_interface/src/: printf.h
Qt/my_programm/Organizations/Impulse/E6-27/e6-27_interface/src/font/: big_font.c
Qt/my_programm/Organizations/Impulse/E6-27/e6-27_interface/src/i2c/: i2c_reserv.c
Qt/my_programm/Organizations/Impulse/E6-27/e6-27_interface/src/lcd/: lcd.h
Qt/my_programm/Organizations/Impulse/E6-27/e6-27_interface/src/touchscreen/: touchscreen.c
Tests/: Tests.pro  clean_tmp_files
_Template/: .qmake.stash  _Template.pro  main.cpp
genetics/: main.cpp  run.sh
hello_speak/: hello_speak.pro
other/: clean_tmp_files.bat
other/i-Vizon/trunk/openmp/1.hello_world/CMake/: CMakeLists.txt
other/i-Vizon/trunk/pcl/1.FirstSample/Qt/first_sample/: CMakeLists.txt  main.cpp
qtyandexapi/: QtYandexApiProject.pro  QtYandexApiSettings.pri
solution_8/: main.cpp  solution_8  stats.txt
uhid/: run.sh  uhid_test
(+16454 files in other folders)
